# link-dns-proxy

./: .gitignore  Cargo.toml  LICENSE  todo.md
config/: default.cfg  default.ini  default.yaml  example-filters.txt  example.yaml
src/: config.rs  dns_proxy.rs  dns_query.rs  dns_server.rs  main.rs
src/dns_proxy/: cache.rs  config.rs  dns_proxy.rs  filter.rs
src/dns_server/: config.rs  connection.rs  dns_server.rs  https_connection.rs  tcp_connection.rs  udp_connection.rs
