[package]
name = "link-dns-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
rand = "0.9.1"
reqwest = "0.12.15"
tokio = { version = "1", features = ["net", "rt", "macros"] }
tokio-native-tls = "0.3.1"
tokio-socks = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
trust-dns-proto = "0.23.2"
