[package]
name = "link-dns-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5" , features = ["derive"] }
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["socks"] }
tokio = { version = "1.44", features = ["net", "rt", "macros"] }
tokio-native-tls = "0.3"
tokio-socks = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
trust-dns-proto = "0.23"
